--- a/templates/locales/ru.json
+++ b/templates/locales/ru.json
@@ -3,15 +3,16 @@
     "register": "Зарегистрироваться",
     "welcome": "Сократите свои длиннющие ссылки :)",
     "welcome_text": "Linkly — это эффективный и простой в использовании сервис сокращения URL-адресов, который упрощает вашу работу в Интернете.",
+    "input_text": "Введите ссылку здесь",
     "short-url_title": "Ваш короткий URL готов!",
     "short-url_text": "Нажмите на ссылку, чтобы открыть ее, или используйте кнопки, чтобы легко поделиться!",
-    "datatable_title":"You can create  more links. Register Now to enjoy Unlimited usage",
-    "data_short":"Short Link",
-    "data_origin":"Original Link",
-    "data_qrcode":"QR Code",
-    "data_clicks":"Clicks",
-    "data_status":"Status",
-    "data_date":"Date",
-    "last_register": "Register Now",
-    "last_register-text": "to enjoy Unlimited History"
+    "datatable_title":"Вы можете создать еще 05 ссылок. Зарегистрируйтесь сейчас, чтобы воспользоваться неограниченным использованием",
+    "data_short":"Короткая ссылка",
+    "data_origin":"Оригинальная ссылка",
+    "data_qrcode":"QR-код",
+    "data_clicks":"Клики",
+    "data_status":"Статус",
+    "data_date":"Дата",
+    "last_register": "Зарегистрируйтесь сейчас",
+    "last_register-text": "чтобы насладиться неограниченной историей"
   }
