--- a/templates/locales/en.json
+++ b/templates/locales/en.json
@@ -3,9 +3,10 @@
     "register": "Register",
     "welcome": "Shorten Your Loooong Links :)",
     "welcome_text": "Linkly is an efficient and easy-to-use URL shortening service that streamlines your online experience.",
+    "input_text": "Enter the link here",
     "short-url_title": "Your short URL is ready!",
     "short-url_text": "Click the link to open or use the buttons to share easily!",
-    "datatable_title":"You can create  more links. Register Now to enjoy Unlimited usage",
+    "datatable_title":"You can create 05 more links. Register Now to enjoy Unlimited usage",
     "data_short":"Short Link",
     "data_origin":"Original Link",
     "data_qrcode":"QR Code",
